Inzynierka/force-app/main/default/objects/Meal_type_has_product__c/Meal_type_has_product__c.object-meta.xml
<CustomObject>
    <label>Meal type has product</label>
    <nameField>
        <label>Meal type has product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MealTypeHasProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>