Inzynierka/force-app/main/default/objects/Meal_type_has_product__c/fields/Grammage__c.field-meta.xml
<CustomField>
    <fullName>Grammage__c</fullName>
    <label>Grammage</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>