Inzynierka/force-app/main/default/objects/Meal_type_has_product__c/fields/Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meal Type</label>
    <referenceTo>Meal_Type__c</referenceTo>
    <relationshipLabel>MealTypeHasProducts</relationshipLabel>
    <relationshipName>MealTypeHasProducts</relationshipName>
    <type>Lookup</type>
</CustomField>