Inzynierka/force-app/main/default/objects/Meal_type_has_product__c/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product</label>
    <referenceTo>New_Product__c</referenceTo>
    <relationshipLabel>MealTypeHasProducts</relationshipLabel>
    <relationshipName>MealTypeHasProducts</relationshipName>
    <type>Lookup</type>
</CustomField>